--- a/AspNetCore.Test3/AspNetCore.Test3.csproj
+++ b/AspNetCore.Test3/AspNetCore.Test3.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AspNetCore.RabbitMq\AspNetCore.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
